--- a/index.html
+++ b/index.html
@@ -268,13 +268,13 @@
     <!-- Секция статистики -->
     <section class="stats-section">
         <div class="stat-item">
-            <h2 data-en="Tech" data-ru="Технологии">Tech</h2>
-            <p data-en="Modern Stack" data-ru="Современный стек">Modern Stack</p>
+            <h2 data-en="Tech" data-ru="Технологии">Технологии</h2>
+            <p data-en="Modern Stack" data-ru="Современный стек">Современный стек</p>
         </div>
         
         <div class="stat-item">
-            <h2 data-en="Projects" data-ru="Проекты">Projects</h2>
-            <p data-en="Successfully Delivered" data-ru="Успешно реализованы">Successfully Delivered</p>
+            <h2 data-en="Projects" data-ru="Проекты">Проекты</h2>
+            <p data-en="Successfully Delivered" data-ru="Успешно реализованы">Успешно реализованы</p>
         </div>
     </section>
 
